# sokoban

./: .gitignore  CMakeLists.txt  chickoban.data  chickoban.js  chickoban.wasm  index.html  readme.md
assets/: levels.txt
assets/models/: box.mtl  corner.gltf  floor.mtl  split_wall.gltf  wall.gltf
assets/shaders/: fragment-100.glsl  fragment-330.glsl  vertex-100.glsl  vertex-330.glsl
assets/shaders/glsl100/: lighting.fs
src/: .clang-format  animation.h  app.c  app.h  assets.c  assets.h  emscripten_template.html  game.c  game.h  levels.c  levels.h  levels.txt  main.c  rlights.h
